--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 * text=auto
 
 .c++ linguist-detectable=false
+.Dart linguist-detectable=true
 
 ###############################################################################
 # Set default behavior for command prompt diff.
